[tool.poetry]
name = "ChatPDF"
version = "0.1.0"
description = ""
authors = ["Daco2020 <dacokim32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysqlite-binary = "^0.5.1.3380300"
langchain = "^0.0.304"
pypdf = "^3.16.2"
chromadb = "^0.4.13"
tiktoken = "^0.5.1"
openai = "^0.28.1"
streamlit-extras = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
